--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap/dist/css/main.css">
+    <link rel="stylesheet" href="bootstrap/dist/css/main.css.map">
+    <link rel="stylesheet" href="bootstrap/scss/main.scss">
 
     <title>Baranov Sergey CV</title>
   </head>
   <body>
+      <header id="header" class="fixed-top">
+
+      </header>
     
 
     <!-- Optional JavaScript; choose one of the two! -->
