--- a/index.html
+++ b/index.html
@@ -7,16 +7,42 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap/dist/css/main.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/main.css">
+    <!-- own css-->
     <link rel="stylesheet" href="bootstrap/dist/css/main.css.map">
     <link rel="stylesheet" href="bootstrap/scss/main.scss">
+
+    <!--font used-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
     <title>Baranov Sergey CV</title>
   </head>
   <body>
-      <header id="header" class="fixed-top">
 
+    <!-- Start header-->
+      <header id="header">
+        <div class="d-flex flex-column">
+          <div class="profile">
+            <div class="logo"></div>
+            <div class="title">
+              <h1>Sergey Baranov</h1>
+              <p>UX/UI designer</p>
+            <div>
+            <div class="social-links">
+              <a href="#" class="dribbble">
+                <i class="fab fa-dribbble"></i>
+              </a>
+            </div>
+
+
+          </div>
+          <nav id="navbar" div class="nav-menu navbar"></nav>
+        </div>
       </header>
+
+    <!-- end header-->
     
 
     <!-- Optional JavaScript; choose one of the two! -->
