--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
+     <!--for font awesome-->
+     <script src="https://use.fontawesome.com/185bb11144.js"></script>
+
     <title>Baranov Sergey CV</title>
   </head>
   <body>
@@ -31,14 +34,39 @@
               <p>UX/UI designer</p>
             <div>
             <div class="social-links">
-              <a href="#" class="dribbble">
+              <a href="https://dribbble.com/SergeyBaranov" class="dribbble">
                 <i class="fab fa-dribbble"></i>
               </a>
             </div>
-
-
           </div>
-          <nav id="navbar" div class="nav-menu navbar"></nav>
+          <nav id="navbar" div class="nav-menu navbar">
+            <ul>
+              <li>
+                <a href="#resume" class="nav-link scrollto active">
+                  <i class="far fa-user"></i>
+                  <span>Resume</span>
+                </a>
+              </li>
+              <li>
+                <a href="#portfolio" class="nav-link scrollto">
+                  <i class="far fa-user"></i>
+                  <span>Portfolio</span>
+                </a>
+              </li>
+              <li>
+                <a href="#tools" class="nav-link scrollto">
+                  <i class="far fa-user"></i>
+                  <span>Tools</span>
+                </a>
+              </li>
+              <li>
+                <a href="#contacts" class="nav-link scrollto">
+                  <i class="far fa-user"></i>
+                  <span>Contacts</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </header>
 
@@ -49,6 +77,8 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+   
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
