--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 
      <!--for font awesome-->
      <script src="https://use.fontawesome.com/185bb11144.js"></script>
@@ -35,33 +37,33 @@
             <div>
             <div class="social-links">
               <a href="https://dribbble.com/SergeyBaranov" class="dribbble">
-                <i class="fab fa-dribbble"></i>
+                <svg id="dribbble" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M8.8,3.59c2.86,2.94,6.3,7.85,8.05,16" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-2" data-name="primary" d="M3.24,9.91a18.3,18.3,0,0,0,7.2-.48,18.21,18.21,0,0,0,2.16-.71,16.85,16.85,0,0,0,5.46-3.37" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-3" data-name="primary" d="M21,12.8a13.07,13.07,0,0,0-10.14,1.31,14.32,14.32,0,0,0-5,4.45" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><circle id="primary-4" data-name="primary" cx="12" cy="12" r="9" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></circle></svg>
               </a>
             </div>
-          </div>
+          </div> 
           <nav id="navbar" div class="nav-menu navbar">
             <ul>
-              <li>
+              <li> 
                 <a href="#resume" class="nav-link scrollto active">
-                  <i class="far fa-user"></i>
+                  <svg id="envelope" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M20,19H4a1,1,0,0,1-1-1V6A1,1,0,0,1,4,5H20a1,1,0,0,1,1,1V18A1,1,0,0,1,20,19ZM7,9l4.38,3.49a1,1,0,0,0,1.24,0L17,9" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg>
                   <span>Resume</span>
                 </a>
               </li>
               <li>
                 <a href="#portfolio" class="nav-link scrollto">
-                  <i class="far fa-user"></i>
+                  <svg id="suitcase-bag" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M19.83,14.39l-.72,5.73a1,1,0,0,1-1,.88H5.88a1,1,0,0,1-1-.88l-.72-5.73" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-2" data-name="primary" d="M20.32,14.23l-4.53,1.51a12,12,0,0,1-7.58,0L3.68,14.23a1,1,0,0,1-.68-1V7H21v6.28A1,1,0,0,1,20.32,14.23ZM11,12h2m4-6a3,3,0,0,0-3-3H10A3,3,0,0,0,7,6V7H17Z" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg>
                   <span>Portfolio</span>
                 </a>
               </li>
               <li>
                 <a href="#tools" class="nav-link scrollto">
-                  <i class="far fa-user"></i>
+                  <svg id="pencil-ruler" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M7,3V21H3V3ZM19,17H7v4H19ZM20.71,4.69l-1.4-1.4a1,1,0,0,0-1.4,0L13,8.2V11h2.8l4.91-4.91A1,1,0,0,0,20.71,4.69Z" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg>
                   <span>Tools</span>
                 </a>
               </li>
               <li>
                 <a href="#contacts" class="nav-link scrollto">
-                  <i class="far fa-user"></i>
+                  <svg id="address-book" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M18,21H5a1,1,0,0,1-1-1V4A1,1,0,0,1,5,3H18a1,1,0,0,1,1,1V20A1,1,0,0,1,18,21ZM21,7H19V9h2Zm0,6H19v2h2ZM5,8H3m2,4H3m2,4H3" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg>
                   <span>Contacts</span>
                 </a>
               </li>
