--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <li> 
                 <a href="#resume" class="nav-link scrollto active">
                   <svg id="envelope" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M20,19H4a1,1,0,0,1-1-1V6A1,1,0,0,1,4,5H20a1,1,0,0,1,1,1V18A1,1,0,0,1,20,19ZM7,9l4.38,3.49a1,1,0,0,0,1.24,0L17,9" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg>
-                  <span>Resume</span>
+                  <span>CV</span>
                 </a>
               </li>
               <li>
