--- a/index.html
+++ b/index.html
@@ -71,8 +71,108 @@
           </nav>
         </div>
       </header>
-
     <!-- end header-->
+    <!--Start main content-->
+    
+    <!--start resume part-->
+    <div id="mainpart">
+      <div id="resume" class="resume">
+        <div class="container">
+          <div class="section-title">
+            <h2>CV</h2>
+            <p>My name is Sergey. I'm UX/UI designer. I work as a designer about 10 years. Please look at my CV.</p>
+
+            <h3>Education</h3>
+            <ul>
+              <li>from 2002 to 2007 – Mari State university</li>
+              <li>2014 – Web development course</li>
+              <li>2015 – QA course for beginner</li>
+            </ul>
+
+            <h3>Work background</h3>
+            <div class="job">
+              <p class="year">October 2019 – present</p>
+              <h5>Yo Solutions LLC</h5>
+              <p class="career">Senior designer</p>
+              <ul>
+                <li>Ux design for mobile and web applications. Create usecase and flows for userstories</li>
+                <li>Create user stories for Uitest</li>
+                <li>UI components for applications</li>
+                <li>animations for ui (aftereffects)</li>
+                <li>Create design specification for developers</li>
+              </ul>
+            </div>
+            <div class="job-even">
+              <p class="year">May 2019 — October 2019</p>
+              <h5>Mobile solutions for constructions, LLC</h5>
+              <p class="career">Senior designer</p>
+              <ul>
+                <li>Ux design for mobile and web applications. Create usecase and flows for userstories</li>
+                <li>Create user stories for Uitest</li>
+                <li>UI components for applications</li>
+                <li>Animations for ui (aftereffects)</li>
+                <li>Create design specification for developers</li>
+              </ul>
+            </div>
+            <div class="job">
+              <p class="year">October 2016 — May 2019</p>
+              <h5>Citronium LLC</h5>
+              <p class="career">Art director</p>
+              <ul>
+                <li>Create design for mobile and web applications</li>
+                <li>Collect information about the project from the client. Create userstories and tasks for design team</li>
+                <li>Prototype and create design for the project</li>
+                <li>Protect design and solutions of design team</li>
+                <li>Create design specification for developers</li>
+              </ul>
+            </div>
+            <div class="job-even">
+              <p class="year">April 2015 – October 2016</p>
+              <h5>The 1st Bit</h5>
+              <p class="career">UX/UI designer</p>
+              <ul>
+                <li>Create design for mobile and web applications</li>
+                <li>Prototype and create design for the project</li>
+              </ul>
+            </div>
+            <div class="job">
+              <p class="year">February 2012 – January 2014</p>
+              <h5>TeamForce LLC</h5>
+              <p class="career">UX/UI designer </p>
+              <ul>
+                <li>Create design for mobile and web applications</li>
+                <li>Prototype and create design for the project</li>
+                <li>Create design for websites, Landing pages</li>
+                <li>Collaboration with developers</li>
+              </ul>
+            </div>
+          </div>
+          <div class="row"></div>
+        </div>
+      </div>
+      <div id="portfolio" class="portfolio">
+        <div class="container">
+          <div class="section-title">
+            <h2>Portfolio</h2>
+            <p>You can check some of my previous works</p>
+          </div>
+          <div class="row">
+            <div class="forportfolio">
+              <div class="col-lg-4 col-md6 portfolio-item">
+                <div class="portfolio-wrap">
+                  <img src="" alt="">
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--end resume part-->
+
+    <!--End main content-->
+
     
 
     <!-- Optional JavaScript; choose one of the two! -->
