--- a/index.html
+++ b/index.html
@@ -156,17 +156,44 @@
             <h2>Portfolio</h2>
             <p>You can check some of my previous works</p>
           </div>
-          <div class="row">
-            <div class="forportfolio">
+          <div class="row forportfolio">
               <div class="col-lg-4 col-md6 portfolio-item">
                 <div class="portfolio-wrap">
-                  <img src="" alt="">
+                  <img src="node_modules\bootstrap\dist\images\01.png" alt="">
+                  <div class="links">
+                    <a href="https://www.figma.com/file/98BO8J8gif0QE8f9NAisUd/?node-id=4%3A3150"><svg id="link-alt2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M14.5,9.5a3.54,3.54,0,0,1,0,5l-5,5a3.54,3.54,0,0,1-5,0h0a3.54,3.54,0,0,1,0-5" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-2" data-name="primary" d="M19.5,9.5a3.54,3.54,0,0,0,0-5h0a3.54,3.54,0,0,0-5,0l-5,5a3.54,3.54,0,0,0,0,5h0" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg></a>
+                  </div>
                 </div>
               </div>
-
-            </div>
+              <div class="col-lg-4 col-md6 portfolio-item">
+                <div class="portfolio-wrap">
+                  <img src="node_modules\bootstrap\dist\images\02.png" alt="">
+                  <div class="links">
+                    <a href="https://www.figma.com/file/98BO8J8gif0QE8f9NAisUd/?node-id=4%3A8871"><svg id="link-alt2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M14.5,9.5a3.54,3.54,0,0,1,0,5l-5,5a3.54,3.54,0,0,1-5,0h0a3.54,3.54,0,0,1,0-5" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-2" data-name="primary" d="M19.5,9.5a3.54,3.54,0,0,0,0-5h0a3.54,3.54,0,0,0-5,0l-5,5a3.54,3.54,0,0,0,0,5h0" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md6 portfolio-item">
+                <div class="portfolio-wrap">
+                  <img src="node_modules\bootstrap\dist\images\03.png" alt="">
+                  <div class="links">
+                    <a href="https://expert12.ru/"><svg id="link-alt2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon line" width="24" height="24"><path id="primary" d="M14.5,9.5a3.54,3.54,0,0,1,0,5l-5,5a3.54,3.54,0,0,1-5,0h0a3.54,3.54,0,0,1,0-5" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path><path id="primary-2" data-name="primary" d="M19.5,9.5a3.54,3.54,0,0,0,0-5h0a3.54,3.54,0,0,0-5,0l-5,5a3.54,3.54,0,0,0,0,5h0" style="fill: none; stroke: rgb(59, 36, 124); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"></path></svg></a>
+                  </div>
+                </div>
+              </div>
           </div>
+          <div class="more_links">You can check more of my works on <a href="https://www.figma.com/file/98BO8J8gif0QE8f9NAisUd/different-works?node-id=0%3A1">Figma</a></div>
         </div>
+
+        <!--start skills-->
+        <div id="tools" class="Tools">
+          <div class="container">
+            <div class="section-title">
+              <h2>My tools</h2>
+              <p>Here you can check all of tools I use in my daily work</p>
+            </div>
+            <div class="row forportfolio"></div>
+        <!--end skills-->
       </div>
     </div>
     <!--end resume part-->
