--- a/index.html
+++ b/index.html
@@ -192,9 +192,52 @@
               <h2>My tools</h2>
               <p>Here you can check all of tools I use in my daily work</p>
             </div>
-            <div class="row forportfolio"></div>
+            <div class="row fortools">
+              <div class="toolTitle">UX/UI</div>
+              <ul>
+                <li>Figma</li>
+              </ul>
+              <div class="toolTitle">Animation</div>
+              <ul>
+                <li>Adobe aftereffects</li>
+                <li>Adobe Animate</li>
+              </ul>
+              <div class="toolTitle">Prototyping</div>
+              <ul>
+                <li>Figma</li>
+                <li>Miro</li>
+              </ul>
+              <div class="toolTitle">Graphic/Illustration</div>
+              <ul>
+                <li>Adobe Photoshop</li>
+                <li>Adobe Illustration</li>
+              </ul>
+              <div class="toolTitle">Other Tools</div>
+              <ul>
+                <li>Adobe InDesign</li>
+                <li>FigJam</li>
+                <li>VS Code</li>
+              </ul>
+            </div>
+            </div>
         <!--end skills-->
+        <!--contacts-->
+        <div id="contacts" class="contacts">
+          <div class="container">
+            <div class="section-title">
+              <h2>My Contacts</h2>
+              <p>Feel free to ask me questions</p>
+            </div>
+            <div class="row forcontacts">
+              <ul>
+                <li>Email: <a href="mailto:workinggrid@gmail.com">workinggrid@gmail.com</a></li>
+                <li>Phone: <a href="tel:+79278727956">+7 927 872 7956</a></li>
+              </ul>
+            </div>
+        </div>
+        <!--end of contacts-->
       </div>
+
     </div>
     <!--end resume part-->
 
